# claude-code-token-counter

./: .gitignore  README.md  index.html  package.json
src/: App.css  App.tsx  GlassSurface.tsx  PopoverContent.tsx  Sparkline.tsx  format.ts  icons.tsx  theme.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  usage.rs
