[package]
name = "claude-code-token-counter"
version = "0.1.0"
description = "macOS menu-bar token counter for Claude Code"
authors = ["you"]
edition = "2021"

[lib]
name = "claude_code_token_counter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
glob = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
notify = "6"
notify-debouncer-full = "0.3"
tauri-plugin-liquid-glass = "0.1.6"

[target."cfg(target_os = \"macos\")".dependencies]
window-vibrancy = "0.5"
